--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 
 # Use this property to enable/disable Gradle Daemon (long-lived background process)
 # Reference: https://docs.gradle.org/current/userguide/gradle_daemon.html
-org.gradle.daemon=false
+org.gradle.daemon=true
 
 # Use this property if you want to use a JDK other than the one specified in your PATH variable.
 # e.g org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk1.7.0_80.jdk/Contents/Home
